Fixed hero layout shift issue

--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,7 @@ header {
     background-image: linear-gradient(to right, rgba(10, 15, 17, 0.85), rgba(10, 15, 17, 0.85)), url(../images/hero-wallpaper.webp);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 @media (max-width: 1300px) {
@@ -46,7 +47,6 @@ header {
 .hero-container {
     max-width: 1300px;
     display: flex;
-    align-items: center;
     padding: 0 2rem;
     margin: 4rem auto 0 auto;
     gap: 3rem;
@@ -55,7 +55,7 @@ header {
 @media (max-width: 1300px) {
     .hero-container {
         flex-flow: column;
-        justify-content: center;
+        align-items: center;
         margin: 2rem auto 0 auto;
     }
 }
@@ -67,12 +67,17 @@ header {
 }
 
 .hero-info {
+    margin-top: 0.9rem;
     width: 600px;
-    height: auto;
-    flex: 1;
     display: flex;
     flex-flow: column;
     gap: 1rem;
+}
+
+@media (max-width: 1300px) {
+    .hero-info {
+        margin-top: 0;
+    }
 }
 
 @media (max-width: 650px) {
@@ -123,7 +128,6 @@ header {
 
 .hero-video {
     width: 600px;
-    flex: 1;
 }
 
 @media (max-width: 650px) {
